# lolskin-price-tracker

./: README.md  docker-compose.yml  myapp.conf
backend/: .gitignore  Dockerfile  README.md  alembic.ini  backend.dockerfile  db_config.ini.sample  db_config_template.ini  generate_test_database.sh  log_conf.json  pyproject.toml  run.sh  see_db.py  sqlite3.db
backend/alembic/: env.py
backend/alembic/versions/: 0314efd61303_.py  102045a9baaa_remove_obsolete_columns.py  282e09f96776_add_is_available_and_is_on_sale.py  40985a92268d_add_likes_and_dislikes_table.py  78c2284225d0_initial_migration.py  963c003e0059_add_trigger_for_price_and_sale_price.py  a80b813b9641_add_users_and_comments_table.py  ea30065d1869_.py
backend/alembic/versions/backup/: 0314efd61303_.py  282e09f96776_add_is_available_and_is_on_sale.py  6d0d8b144559_.py  e94ff0f5b1f0_migrate_constraint_name.py
backend/app/: crud.py  database.py  db_config.py  gen_test_history.py  main.py  models.py  schemas.py  sqlite3.db  update_champions.py  update_price_history.py  update_static.py
backend/league-client-stuff/: README.md  update_price.ps1
backend/league_client_data_fetcher/: .gitignore  README.md  secrets.py.sample  update_price.ps1  update_price.py
backend/lolskin_price_tracker/: crud.py  main.py  model.py  schemas.py
backend/tests/: test_lolskin_price_tracker.py
backend/update_scripts/: gen_test_history.py  update_price_history.py  update_static.py
frontend/: .gitignore  Dockerfile.build  Dockerfile.dev  README.md  dev-image.sh  dev-run.sh  package.json
frontend/public/: _redirects  (+2 more)
(+65 files in other folders)
