[tool.poetry]
name = "lolskin_price_tracker"
version = "0.1.0"
description = ""
authors = ["jiyolla <jiyolla0919@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.67.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
