[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jiyolla <jiyolla0919@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.68.1"}
requests = "^2.26.0"
SQLAlchemy = "^1.4.22"
aiohttp = "^3.7.4"
tqdm = "^4.62.0"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
lcu-driver = "^2.1.3"
google-auth = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
